# acpplotslib

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/acp_gui/: gui_components.py  launch_gui.py  main_app.py
src/calc/: broadening.pyx  core_functionality.py
src/fileio/: fchk.py  json.py
src/graph/: plots.py
src/jmol_interface/: wrapper.py
src/utils/: gxx_exceptions.py  gxx_units_np.py  helpers.py
