[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "acpplots"
version = "0.1.0"
description = "A library for advanced computational plotting."
authors = [{name = "Marco Fusè", email = "marco.fuse@unibs.it"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["chemistry", "spectroscopy", "computational", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "periodictable>=1.6.0",
    "numpy>=1.19.0",
    "cython>=0.29.0",
    "matplotlib>=3.3.0",
    "PySide6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.scripts]
acp-gui = "acp_gui.launch_gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/acpplots"
Repository = "https://github.com/yourusername/acpplots"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]